[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "promptshield"
version = "1.0.0"
description = "PromptShield - Prompt Injection Detector OpenEnv Environment"
authors = [
    {name = "Nidesh Kaarthik R S"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.1",
    "python-dotenv>=1.0.1",
    "openai>=1.30.1",
    "requests>=2.31.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["promptshield*"]
